--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gtk+2.0 (2.10.1-0beta1) experimental; urgency=low
+gtk+2.0 (2.10.1-0beta2) experimental-WIP; urgency=low
 
   * THIS IS NOT THE FINAL 2.10 RELEASE; THIS IS NOT SUITED FOR PACKAGE
     MAINTAINERS TO PREPARE FOR TRANSITIONS.
@@ -43,8 +43,10 @@ gtk+2.0 (2.10.1-0beta1) experimental; urgency=low
     - New patch, 011_gdk-directfb-cvs-changes, backport of CVS only build
       fixes to permit compilation against directfb 0.9.25.1.
   * Fix bashishms in debian/rules. (Closes: #385473)
+  * Generate a Provides: gtk2.0-binver-@BINVER@ in libgtk2.0-@SONAME@ to track
+    the binary version of Gtk and to permit Gtk modules to depend on it.
 
- -- Loic Minier <lool@dooz.org>  Wed, 23 Aug 2006 19:14:31 +0200
+ -- Loic Minier <lool@dooz.org>  Fri,  8 Sep 2006 22:00:44 +0200
 
 gtk+2.0 (2.8.20-1) unstable; urgency=low
 
