--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gtk+2.0 (2.8.20-2) UNRELEASED; urgency=low
+
+  * New patch, 009_revert-gdkdrawable-directfb, to revert a fix for Italic
+    letters which caused ugly unneeded horizontal/vertical lines; thanks
+    Davide Viti. (Closes: #386860)
+
+ -- Loic Minier <lool@dooz.org>  Sun, 10 Sep 2006 21:52:17 +0200
+
 gtk+2.0 (2.8.20-1) unstable; urgency=low
 
   * New upstream releases; no API changes.
