--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ gtk+2.0 (2.8.20-2) UNRELEASED; urgency=low
   * New patch, 009_revert-gdkdrawable-directfb, to revert a fix for Italic
     letters which caused ugly unneeded horizontal/vertical lines; thanks
     Davide Viti. (Closes: #386860)
+  * Fix typo, install-dfb depends on build-dfb, not build-shared.
 
- -- Loic Minier <lool@dooz.org>  Sun, 10 Sep 2006 21:52:17 +0200
+ -- Loic Minier <lool@dooz.org>  Mon, 11 Sep 2006 12:04:46 +0200
 
 gtk+2.0 (2.8.20-1) unstable; urgency=low
 
