--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gtk+2.0 (2.10.1-0beta2) experimental-WIP; urgency=low
+gtk+2.0 (2.10.1-0beta2) experimental; urgency=low
 
   * THIS IS NOT THE FINAL 2.10 RELEASE; THIS IS NOT SUITED FOR PACKAGE
     MAINTAINERS TO PREPARE FOR TRANSITIONS.
@@ -55,8 +55,24 @@ gtk+2.0 (2.10.1-0beta2) experimental-WIP; urgency=low
   * Build flavors out-of-tree; saves 25% of required build space (315 MB) and
     some build time / IO load; this clutters the headers a little (full build
     path is mentionned instead of ".") though.
+  * Rewrite and cleanup the build process completely.
+  * Install the full set of pkg-config files from the dfb flavor in
+    /usr/lib/pkgconfig/libgtk-directfb-2.0; to use this feature, set
+    PKG_CONFIG_PATH while invoking pkg-config (or configure); the
+    /usr/lib/pkgconfig/*directfb*.pc files will be removed when Debian sources
+    have been converted.
+  * In the same spirit, gdkconfig.h is in /usr/lib/gtk-2.0/include/directfb;
+    to use it, prepend -I/usr/lib/gtk-2.0/include/directfb to CFLAGS.
+  * Fix generation of /etc/gtk-2.0/gdk-pixbuf.loaders for the udeb.
+    (Closes: #382435)
+  * Build-depend on libcairo-directfb2-dev >= 1.2.4-2 to get PDF/PS support in
+    the directfb flavor of libcairo.
+  * Recommend the linked source packages in libgtk2.0-doc instead of simply
+    suggesting them.
+  * Rewrite update-gdkpixbuf-loaders and update-gtk-immodules.
+  * Drop double libatk1.0-dev build-dep.
 
- -- Loic Minier <lool@dooz.org>  Mon, 11 Sep 2006 13:30:08 +0200
+ -- Loic Minier <lool@dooz.org>  Wed, 13 Sep 2006 22:21:27 +0200
 
 gtk+2.0 (2.8.20-1) unstable; urgency=low
 
