--- a/debian/changelog
+++ b/debian/changelog
@@ -71,8 +71,9 @@ gtk+2.0 (2.10.1-0beta2) experimental; urgency=low
     suggesting them.
   * Rewrite update-gdkpixbuf-loaders and update-gtk-immodules.
   * Drop double libatk1.0-dev build-dep.
+  * Empty the dependency_libs in the *.la files of libgtk2.0-dev.
 
- -- Loic Minier <lool@dooz.org>  Wed, 13 Sep 2006 22:21:27 +0200
+ -- Loic Minier <lool@dooz.org>  Wed, 13 Sep 2006 22:45:10 +0200
 
 gtk+2.0 (2.8.20-1) unstable; urgency=low
 
