--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gtk+2.0 (2.10.1-0beta2) experimental; urgency=low
+gtk+2.0 (2.10.1-0beta3) experimental-WIP; urgency=low
 
   * THIS IS NOT THE FINAL 2.10 RELEASE; THIS IS NOT SUITED FOR PACKAGE
     MAINTAINERS TO PREPARE FOR TRANSITIONS.
@@ -73,7 +73,7 @@ gtk+2.0 (2.10.1-0beta2) experimental; urgency=low
   * Drop double libatk1.0-dev build-dep.
   * Empty the dependency_libs in the *.la files of libgtk2.0-dev.
 
- -- Loic Minier <lool@dooz.org>  Wed, 13 Sep 2006 22:45:10 +0200
+ -- Loic Minier <lool@dooz.org>  Thu, 14 Sep 2006 13:04:26 +0200
 
 gtk+2.0 (2.8.20-1) unstable; urgency=low
 
