--- a/debian/changelog
+++ b/debian/changelog
@@ -84,8 +84,9 @@ gtk+2.0 (2.10.1-0beta3) experimental-WIP; urgency=low
       for the shared library.
     - Continue generating /etc/gtk-2.0/gtk.immodules until packages are
       updated.
+  * Add the libpixmap engine to the udeb for the new Bladr GTK theme for g-i.
 
- -- Loic Minier <lool@dooz.org>  Sat, 16 Sep 2006 19:04:48 +0200
+ -- Loic Minier <lool@dooz.org>  Sat, 16 Sep 2006 23:11:42 +0200
 
 gtk+2.0 (2.8.20-1) unstable; urgency=low
 
