--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gtk+2.0 (2.10.1-0beta3) experimental-WIP; urgency=low
+gtk+2.0 (2.10.1-1) experimental; urgency=low
 
   * THIS IS NOT THE FINAL 2.10 RELEASE; THIS IS NOT SUITED FOR PACKAGE
     MAINTAINERS TO PREPARE FOR TRANSITIONS.
@@ -21,6 +21,16 @@ gtk+2.0 (2.10.1-0beta3) experimental-WIP; urgency=low
     - Update list of docs to ship; now includes NEWS. (Closes: #384225)
     - Update watch file to track stable releases and use HTTP.
     - Set GTK_BINARY_VERSION to 2.10.0.
+    - Add or bump Conflicts with packages shipping modules for the 2.4.0
+      binary version of Gtk: gtk2-engines-wonderland <= 1.0-3,
+      gtk2-engines-cleanice <= 2.4.0-1, gtk2-engines <= 1:2.6.10-2,
+      gtk2-engines-magicchicken <= 1.1.1-7, gtk2-engines-pixbuf <= 2.8.20-1,
+      gtk2-engines-gtk-qt <= 1:0.7-1, gtk2-engines-qtpixmap <= 0.28-1.1,
+      librsvg2-common <= 2.14.4-2, gtk2-engines-xfce <= 2.3.90.2-1,
+      libgnomeui-0 <= 2.14.1-2, tamil-gtk2im <= 2.2-4.2, imhangul <= 0.9.13-3,
+      iiimgcf <= 11.4.1870-7.3, scim-bridge <= 0.2.4-1, scim-gtk2-immodule <=
+      1.4.4-4, gtk-im-libthai <= 0.1.4-1, uim-gtk2.0 <= 1:1.2.1-3, libwmf-dev
+      <= 0.2.8.4-2, libwmf0.2-7 <= 0.2.8.4-2, swf-player <= 0.3.6-2.1.
     - Replace 001_gtk+-2.2.0-buildfix-immodule patch with
       001_static-linking-dont-query-immodules which has more chances to be
       merged upstream; see GNOME #346531.
@@ -103,8 +113,11 @@ gtk+2.0 (2.10.1-0beta3) experimental-WIP; urgency=low
   * New Debhelper-based command, dh_gtkmodules, to create module files for IM
     modules and GdkPixbuf loaders; it will still add a dependency on the
     binary version of Gtk for other modules.
+  * Make use of the new dh_gtkmodules during the build (override the path to
+    gtk-query-immodules-2.0 and gdk-pixbuf-query-loaders.
+  * Add ${misc:Depends} to gtk2-engines-pixbuf.
 
- -- Loic Minier <lool@dooz.org>  Mon, 18 Sep 2006 22:01:31 +0200
+ -- Loic Minier <lool@dooz.org>  Tue, 19 Sep 2006 15:13:38 +0200
 
 gtk+2.0 (2.8.20-1) unstable; urgency=low
 
