--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,11 @@ gtk+2.0 (2.8.20-2) UNRELEASED; urgency=low
     letters which caused ugly unneeded horizontal/vertical lines; thanks
     Davide Viti. (Closes: #386860)
   * Fix typo, install-dfb depends on build-dfb, not build-shared.
+  * Fix typo (DFB_PKGFIR versus DFB_PKGDIR), use the BUILD_DFB_DIR version of
+    gdk-pixbuf-query-loaders, and set LD_LIBRARY_PATH to the udeb's /usr/lib;
+    should fix the empty /etc/gtk-2.0/gdk-pixbuf.loaders. (Closes: #382435)
 
- -- Loic Minier <lool@dooz.org>  Mon, 11 Sep 2006 12:04:46 +0200
+ -- Loic Minier <lool@dooz.org>  Wed, 20 Sep 2006 20:06:57 +0200
 
 gtk+2.0 (2.8.20-1) unstable; urgency=low
 
