--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gtk+2.0 (2.8.20-2) UNRELEASED; urgency=low
+gtk+2.0 (2.8.20-2) unstable; urgency=low
 
   * New patch, 009_revert-gdkdrawable-directfb, to revert a fix for Italic
     letters which caused ugly unneeded horizontal/vertical lines; thanks
@@ -7,8 +7,10 @@ gtk+2.0 (2.8.20-2) UNRELEASED; urgency=low
   * Fix typo (DFB_PKGFIR versus DFB_PKGDIR), use the BUILD_DFB_DIR version of
     gdk-pixbuf-query-loaders, and set LD_LIBRARY_PATH to the udeb's /usr/lib;
     should fix the empty /etc/gtk-2.0/gdk-pixbuf.loaders. (Closes: #382435)
+  * Ship all engines of the DirectFB build in the udeb, that is
+    engines/libpixmap.so.
 
- -- Loic Minier <lool@dooz.org>  Wed, 20 Sep 2006 20:06:57 +0200
+ -- Loic Minier <lool@dooz.org>  Wed, 20 Sep 2006 21:36:04 +0200
 
 gtk+2.0 (2.8.20-1) unstable; urgency=low
 
