--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gtk+2.0 (2.10.3-3) experimental; urgency=low
+
+  * Update patch 021_loader-files-d to not warn about missing module files or
+    unreadable files as is already the case for immodules; see #388450 for
+    more background.
+
+ -- Loic Minier <lool@dooz.org>  Thu, 21 Sep 2006 11:22:37 +0200
+
 gtk+2.0 (2.10.3-2) experimental; urgency=low
 
   * Drop obsolete --with-cairo-backend configure flag.
