--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+gtk+2.0 (2.10.4-1) experimental; urgency=low
+
+  * New upstream release; no API change.
+    - Switch from tar-in-tar and sys-build to regular source and quilt
+      patching; build-depend on quilt; remove occurrences of $(TOP_SRC_DIR)
+      and @TOP_SRC_DIR@ which isn't needed anymore.
+    - Refresh patch 021_loader-files-d.
+    - Relibtoolize: update path 070_mandatory-relibtoolize.
+
+ -- Loic Minier <lool@dooz.org>  Sat, 23 Sep 2006 10:41:17 +0200
+
 gtk+2.0 (2.10.3-3) experimental; urgency=medium
 
   * Update patch 021_loader-files-d to not warn about missing module files or
