--- a/debian/changelog
+++ b/debian/changelog
@@ -10,9 +10,11 @@ gtk+2.0 (2.10.4-1) experimental; urgency=low
     - New patch, 011_directfb-build-fixes-from-head, to backport directfb
       build fixes; from HEAD not commited in the gtk-2-10 branch.  Thanks
       Attilio Fiandrotti for pointing me at the actual log entry.
+    - New patch, 012_missing-stub-files, to add gtk/gtkplug-stub.c and
+      gtksocket-stub.c missing from the tarball; from the gtk-2-10 branch.
     - Relibtoolize: update path 070_mandatory-relibtoolize.
 
- -- Loic Minier <lool@dooz.org>  Sun, 24 Sep 2006 11:52:59 +0200
+ -- Loic Minier <lool@dooz.org>  Sun, 24 Sep 2006 12:24:31 +0200
 
 gtk+2.0 (2.10.3-3) experimental; urgency=medium
 
