--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gtk+2.0 (2.10.4-2) UNRELEASED; urgency=low
+
+  * Fail if dh_gtkmodules called query helpers on module files, but no module
+    could be written to the module file.
+
+ -- Loic Minier <lool@dooz.org>  Tue, 26 Sep 2006 21:13:24 +0200
+
 gtk+2.0 (2.10.4-1) experimental; urgency=low
 
   * New upstream release; no API change.
