--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,10 @@
-gtk+2.0 (2.10.4-3) UNRELEASED; urgency=low
-
-  * Fix some probably harmless typos.
-
- -- Loic Minier <lool@dooz.org>  Wed, 27 Sep 2006 21:21:05 +0200
-
-gtk+2.0 (2.10.4-2) experimental; urgency=low
+gtk+2.0 (2.10.4-2) experimental-WIP; urgency=low
 
   * Fail if dh_gtkmodules called query helpers on module files, but no module
     could be written to the module file.
   * Parse stderr as well as the stdout of query helpers and bail out if
     g_module_open(); suggest adjusting LD_LIBRARY_PATH.
+  * Fix some probably harmless typos.
 
  -- Loic Minier <lool@dooz.org>  Tue, 26 Sep 2006 21:31:34 +0200
 
