* Remove duplicate find invocation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ gtk+2.0 (2.8.20-3) UNRELEASED; urgency=low
   * New patch, 013_gdkproperty-directfb-strdup, backported from 2.10.6-2, to
     g_strdup() strings returned by gdk_atom_name(); GNOME #357611; thanks
     Attilio Fiandrotti.
+  * Remove duplicate find invocation.
 
  -- Loic Minier <lool@dooz.org>  Fri, 13 Oct 2006 22:21:40 +0200
 
