--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ gtk+2.0 (2.10.6-3) UNRELEASED; urgency=low
 
   * Update gtk2-engines conflict to <= 2.8.1-4.
   * Update gtk2-engines-pixbuf conflict to <= 2.10.
+  * Bump up libcairo-directfb2-dev build-dep to 1.2.4-4.
 
- -- Loic Minier <lool@dooz.org>  Sat, 14 Oct 2006 22:16:15 +0200
+ -- Loic Minier <lool@dooz.org>  Fri, 20 Oct 2006 13:03:17 +0200
 
 gtk+2.0 (2.10.6-2) experimental; urgency=medium
 
