--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,16 @@
-gtk+2.0 (2.10.6-3) UNRELEASED; urgency=low
+gtk+2.0 (2.10.6-3) experimental; urgency=low
 
+  [ Loic Minier ]
   * Update gtk2-engines conflict to <= 2.8.1-4.
   * Update gtk2-engines-pixbuf conflict to <= 2.10.
   * Bump up libcairo-directfb2-dev build-dep to 1.2.4-4.
 
- -- Loic Minier <lool@dooz.org>  Fri, 20 Oct 2006 13:03:17 +0200
+  [ Josselin Mouette ]
+  * 070_mandatory-relibtoolize.patch: recreate with autoconf 2.59, to 
+    avoid the AM_GLIB_DEFINE_LOCALEDIR bug (making GTK+ applications 
+    untranslated).
+
+ -- Josselin Mouette <joss@debian.org>  Sat, 11 Nov 2006 00:04:46 +0100
 
 gtk+2.0 (2.10.6-2) experimental; urgency=medium
 
