--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
-gtk+2.0 (2.10.6-4) UNRELEASED; urgency=low
+gtk+2.0 (2.10.6-4) experimental; urgency=low
 
+  [ Loic Minier ]
   * Update gtk2-engines conflict to << 2.8.2-2.
 
- -- Loic Minier <lool@dooz.org>  Tue, 21 Nov 2006 11:05:09 +0100
+  [ Josselin Mouette ]
+  * 014_gtktreeview_missing-icons.patch, stolen from bugzilla: fix 
+    missing icon in "save as" filechooser dialogs.
+
+ -- Josselin Mouette <joss@debian.org>  Thu, 30 Nov 2006 19:17:45 +0100
 
 gtk+2.0 (2.10.6-3) experimental; urgency=low
 
