--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 gtk+2.0 (2.10.6-5) UNRELEASED; urgency=low
 
+  [ Loic Minier ]
   * Really update gtk2-engines conflict to << 2.8.2-2.
 
- -- Loic Minier <lool@dooz.org>  Fri,  1 Dec 2006 09:06:09 +0100
+  [ Josselin Mouette ]
+  * 022_gtkcupsutils_multipage.patch: new patch, stolen upstream. 
+    Properly pass multi-value options to cups (closes: #404867).
+
+ -- Josselin Mouette <joss@debian.org>  Thu, 28 Dec 2006 23:45:37 +0100
 
 gtk+2.0 (2.10.6-4) experimental; urgency=low
 
