--- a/debian/changelog
+++ b/debian/changelog
@@ -4,10 +4,13 @@ gtk+2.0 (2.10.6-5) UNRELEASED; urgency=low
   * Really update gtk2-engines conflict to << 2.8.2-2.
 
   [ Josselin Mouette ]
-  * 022_gtkcupsutils_multipage.patch: new patch, stolen upstream. 
+  * 022_gtkcupsutils_multipage.patch: new patch, stolen upstream.
     Properly pass multi-value options to cups (closes: #404867).
+  * 023_gtkentry_password-char-circle.patch: patch from Sven Arvidsson 
+    to replace stars by black circles in password fields
+    (closes: #401568).
 
- -- Josselin Mouette <joss@debian.org>  Thu, 28 Dec 2006 23:45:37 +0100
+ -- Josselin Mouette <joss@debian.org>  Fri, 29 Dec 2006 02:11:13 +0100
 
 gtk+2.0 (2.10.6-4) experimental; urgency=low
 
