--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+gtk+2.0 (2.10.7-1) experimental; urgency=low
+
+  * New upstream release.
+  * Refresh patches.
+  * 022_gtkcupsutils_multipage.patch: removed, integrated upstream.
+  * Regenerate 070_mandatory-relibtoolize.patch.
+  * 014_gtktreeview_missing-icons.patch: update patch with the upstream 
+    fix that was committed.
+
+ -- Josselin Mouette <joss@debian.org>  Tue,  9 Jan 2007 23:51:51 +0100
+
 gtk+2.0 (2.10.6-5) experimental; urgency=low
 
   [ Loic Minier ]
