--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 gtk+2.0 (2.10.7-2) UNRELEASED; urgency=low
 
-  * 024_filechooser_single-click.patch: monitor selection changes 
+  [ Josselin Mouette ]
+  * 024_filechooser_single-click.patch: monitor selection changes
     instead of monitoring the cursor.
 
- -- Josselin Mouette <joss@debian.org>  Wed, 10 Jan 2007 20:17:19 +0100
+  [ Loic Minier ]
+  * Add a get-orig-source target to retrieve the upstream tarball.
+
+ -- Loic Minier <lool@dooz.org>  Sat, 13 Jan 2007 22:36:05 +0100
 
 gtk+2.0 (2.10.7-1) experimental; urgency=low
 
