--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gtk+2.0 (2.8.20-5) UNRELEASED; urgency=low
+
+  * Add a get-orig-source target to retrieve the upstream tarball.
+
+ -- Loic Minier <lool@dooz.org>  Sat, 13 Jan 2007 23:32:16 +0100
+
 gtk+2.0 (2.8.20-4) unstable; urgency=medium
 
   * New patch, 020_dfb-window-destroy-leak, fixes a memory leak when
