--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,12 @@ gtk+2.0 (2.10.7-2) UNRELEASED; urgency=low
   * Rename patch 023_gtkentry_password-char-circle to
     030_gtkentry_password-char-circle.
   * Rename patch 024_filechooser_single-click to 040_filechooser_single-click.
+  * New patch, 031_cursor-blinking-timeout.patch, to stop blinking the cursor
+    after a configurable timeout; helps saving energy by not waking up all Gtk
+    processes with a cursor continuously; from upstream SVN r16366 (trunk);
+    GNOME #353670, #352442.
 
- -- Loic Minier <lool@dooz.org>  Mon, 15 Jan 2007 17:40:56 +0100
+ -- Loic Minier <lool@dooz.org>  Fri, 19 Jan 2007 11:52:26 +0100
 
 gtk+2.0 (2.10.7-1) experimental; urgency=low
 
