--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ gtk+2.0 (2.10.7-2) UNRELEASED; urgency=low
   [ Josselin Mouette ]
   * 024_filechooser_single-click.patch: monitor selection changes
     instead of monitoring the cursor.
+  * 015_gdkmain-x11_button-mask.patch, stolen from upstream SVN: fix the 
+    issue of resizing columns needing two tries in some cases
+    (closes: #406906).
 
   [ Loic Minier ]
   * Add a get-orig-source target to retrieve the upstream tarball.
@@ -18,7 +21,10 @@ gtk+2.0 (2.10.7-2) UNRELEASED; urgency=low
   * Bump up libglib2.0-dev of libgtk2.0-dev dep to >= 2.12.0 as well; thanks
     Marc Brockschmidt.
 
- -- Loic Minier <lool@dooz.org>  Fri,  9 Feb 2007 16:45:08 +0100
+  [ Josselin Mouette ]
+  * 
+
+ -- Josselin Mouette <joss@debian.org>  Sat, 17 Feb 2007 23:40:08 +0100
 
 gtk+2.0 (2.10.7-1) experimental; urgency=low
 
