--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gtk+2.0 (2.10.9-2) UNRELEASED; urgency=low
+
+  * Move build and install base dirs to debian/build and debian/install
+    instead of debian/tmp/build and debian/tmp/install.
+
+ -- Loic Minier <lool@dooz.org>  Thu,  8 Mar 2007 15:57:11 +0100
+
 gtk+2.0 (2.10.9-1) experimental; urgency=low
 
   [ Josselin Mouette ]
