--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ gtk+2.0 (2.10.9-2) UNRELEASED; urgency=low
     instead of debian/tmp/build and debian/tmp/install.
   * Cleanup rules.
   * Make debian/control PHONY.
+  * Use @DOC_PKG@ to point at the HTML doc as well.
 
- -- Loic Minier <lool@dooz.org>  Thu,  8 Mar 2007 16:15:04 +0100
+ -- Loic Minier <lool@dooz.org>  Thu,  8 Mar 2007 17:48:24 +0100
 
 gtk+2.0 (2.10.9-1) experimental; urgency=low
 
