--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gtk+2.0 (2.10.9-2) UNRELEASED; urgency=low
+gtk+2.0 (2.10.10-1) UNRELEASED; urgency=low
 
   * Move build and install base dirs to debian/build and debian/install
     instead of debian/tmp/build and debian/tmp/install.
@@ -6,8 +6,14 @@ gtk+2.0 (2.10.9-2) UNRELEASED; urgency=low
   * Make debian/control PHONY.
   * Use @DOC_PKG@ to point at the HTML doc as well.
   * Tune udeb description.
+  * New upstream release.
+    - Drop patch 003_default_fallback_icon_theme, upstream added a fallback on
+      hicolor.
+    - Drop patch 015_gdkmain-x11_button-mask.patch, merged upstream.
+    - Refresh patches.
+    - Relibtoolize.
 
- -- Loic Minier <lool@dooz.org>  Thu,  8 Mar 2007 17:59:09 +0100
+ -- Loic Minier <lool@dooz.org>  Tue, 13 Mar 2007 14:29:12 +0100
 
 gtk+2.0 (2.10.9-1) experimental; urgency=low
 
