--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gtk+2.0 (2.10.11-2) UNRELEASED; urgency=low
+
+  * Bump libwmf conflicts to << 0.2.8.4-5.
+
+ -- Loic Minier <lool@dooz.org>  Wed, 21 Mar 2007 11:05:18 +0100
+
 gtk+2.0 (2.10.11-1) experimental; urgency=low
 
   * Move build and install base dirs to debian/build and debian/install
