--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
 gtk+2.0 (2.10.11-2) UNRELEASED; urgency=low
 
   * Bump libwmf conflicts to << 0.2.8.4-5.
+  * Fix control generation.
+  * Include the new uploaders.mk from gnome-pkg-tools instead of duplicatin
+    gits logic; build-dep on gnome-pkg-tools >= 0.11.
 
- -- Loic Minier <lool@dooz.org>  Wed, 21 Mar 2007 11:05:18 +0100
+ -- Loic Minier <lool@dooz.org>  Mon, 26 Mar 2007 16:44:32 +0200
 
 gtk+2.0 (2.10.11-1) experimental; urgency=low
 
