--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ gtk+2.0 (2.10.11-2) UNRELEASED; urgency=low
   * Fix control generation.
   * Include the new uploaders.mk from gnome-pkg-tools instead of duplicating
     its logic; build-dep on gnome-pkg-tools >= 0.11.
-  * Run "make check" test suite for the deb flavor except if DEB_BUILD_OPTIONS
+  * Run "make check" test suite for all flavors except if DEB_BUILD_OPTIONS
     contains the "nocheck" keyword; ignore failures.
 
  -- Loic Minier <lool@dooz.org>  Mon, 02 Apr 2007 18:10:18 +0200
