--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ gtk+2.0 (2.10.11-2) UNRELEASED; urgency=low
     its logic; build-dep on gnome-pkg-tools >= 0.11.
   * Run "make check" test suite for all flavors except if DEB_BUILD_OPTIONS
     contains the "nocheck" keyword; ignore failures.
+  * Add support for DEB_BUILD_OPTIONS_PARALLEL.
 
- -- Loic Minier <lool@dooz.org>  Mon, 02 Apr 2007 18:10:18 +0200
+ -- Loic Minier <lool@dooz.org>  Wed, 04 Apr 2007 15:12:49 +0200
 
 gtk+2.0 (2.10.11-1) experimental; urgency=low
 
