--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,10 @@ gtk+2.0 (2.10.11-2) UNRELEASED; urgency=low
   * Run "make check" test suite for all flavors except if DEB_BUILD_OPTIONS
     contains the "nocheck" keyword; ignore failures.
   * Add support for DEB_BUILD_OPTIONS_PARALLEL.
+  * Re-enable FAQ and Tutorial which were fixed upstream at some point; update
+    installation dirs.
 
- -- Loic Minier <lool@dooz.org>  Wed, 04 Apr 2007 15:12:49 +0200
+ -- Loic Minier <lool@dooz.org>  Tue, 10 Apr 2007 22:18:23 +0200
 
 gtk+2.0 (2.10.11-1) experimental; urgency=low
 
