--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ gtk+2.0 (2.10.11-2) UNRELEASED; urgency=low
   * Add support for DEB_BUILD_OPTIONS_PARALLEL.
   * Re-enable FAQ and Tutorial which were fixed upstream at some point; update
     installation dirs.
+  * Call dh_installman -a.
 
- -- Loic Minier <lool@dooz.org>  Tue, 10 Apr 2007 22:18:23 +0200
+ -- Loic Minier <lool@dooz.org>  Wed, 11 Apr 2007 18:38:17 +0200
 
 gtk+2.0 (2.10.11-1) experimental; urgency=low
 
