--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 gtk+2.0 (2.10.11-2) UNRELEASED; urgency=low
 
+  [ Loic Minier ]
   * Bump libwmf conflicts to << 0.2.8.4-5.
   * Fix control generation.
   * Include the new uploaders.mk from gnome-pkg-tools instead of duplicating
@@ -11,7 +12,12 @@ gtk+2.0 (2.10.11-2) UNRELEASED; urgency=low
     installation dirs.
   * Call dh_installman -a.
 
- -- Loic Minier <lool@dooz.org>  Wed, 11 Apr 2007 18:38:17 +0200
+  [ Josselin Mouette ]
+  * 040_filechooser_single-click.patch: remove shortcut-related actions 
+    in the response callback. This fixes the annoying bug where you need 
+    to click twice on "save" after clicking on a shortcut.
+
+ -- Josselin Mouette <joss@debian.org>  Wed, 11 Apr 2007 16:46:26 +0200
 
 gtk+2.0 (2.10.11-1) experimental; urgency=low
 
