--- a/debian/changelog
+++ b/debian/changelog
@@ -13,11 +13,15 @@ gtk+2.0 (2.10.11-2) UNRELEASED; urgency=low
   * Call dh_installman -a.
 
   [ Josselin Mouette ]
-  * 040_filechooser_single-click.patch: remove shortcut-related actions 
-    in the response callback. This fixes the annoying bug where you need 
+  * 040_filechooser_single-click.patch: remove shortcut-related actions
+    in the response callback. This fixes the annoying bug where you need
     to click twice on "save" after clicking on a shortcut.
 
- -- Josselin Mouette <joss@debian.org>  Wed, 11 Apr 2007 16:46:26 +0200
+  [ Loic Minier ]
+  * Initialize CFLAGS to -Wall -g; pass debian/rules' CFLAGS and LDFLAGS to
+    configure, doh!
+
+ -- Loic Minier <lool@dooz.org>  Thu, 12 Apr 2007 14:11:40 +0200
 
 gtk+2.0 (2.10.11-1) experimental; urgency=low
 
